--- a/CookMania/Storyboards/Base.lproj/Main.storyboard
+++ b/CookMania/Storyboards/Base.lproj/Main.storyboard
@@ -126,6 +126,9 @@
                                                 <state key="normal" image="google-logo">
                                                     <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 </state>
+                                                <connections>
+                                                    <action selector="googleLogin:" destination="BYZ-38-t0r" eventType="touchUpInside" id="kYi-sK-TfZ"/>
+                                                </connections>
                                             </button>
                                         </subviews>
                                         <constraints>
