--- a/CookMania/Storyboards/Base.lproj/Main.storyboard
+++ b/CookMania/Storyboards/Base.lproj/Main.storyboard
@@ -108,23 +108,28 @@
                                     <action selector="morePopular:" destination="6qe-kK-Ooc" eventType="touchUpInside" id="M2P-lY-if3"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qUM-Q8-x5l">
-                                <rect key="frame" x="323" y="73" width="36" height="36"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" image="shop-cart"/>
-                                <connections>
-                                    <segue destination="TKr-Uu-6v1" kind="show" identifier="toShoppingList" id="Oh4-At-1nf"/>
-                                </connections>
-                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <viewLayoutGuide key="safeArea" id="UUJ-ki-5WI"/>
                     </view>
                     <tabBarItem key="tabBarItem" title="" image="home" id="DiC-DU-j0F"/>
-                    <navigationItem key="navigationItem" id="vbF-6b-6PB">
-                        <barButtonItem key="rightBarButtonItem" id="qCG-IE-15F"/>
+                    <navigationItem key="navigationItem" title="Home" id="YmZ-hg-ZjX">
+                        <rightBarButtonItems>
+                            <barButtonItem systemItem="add" id="zXB-fU-UgO">
+                                <connections>
+                                    <action selector="addRecipe:" destination="6qe-kK-Ooc" id="P1h-2G-1tg"/>
+                                </connections>
+                            </barButtonItem>
+                            <barButtonItem title="cart" image="shop-cart" id="rKl-bX-T0a">
+                                <connections>
+                                    <segue destination="TKr-Uu-6v1" kind="show" id="AvJ-ue-VYF"/>
+                                </connections>
+                            </barButtonItem>
+                        </rightBarButtonItems>
                     </navigationItem>
+                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
                     <connections>
+                        <outlet property="topRatedCollectionView" destination="xmV-UH-ANC" id="Ace-VU-uHi"/>
                         <segue destination="Gjk-RB-pLa" kind="show" identifier="toRecipeList" id="DtB-Bu-ib5"/>
                         <segue destination="oY8-TY-LDq" kind="show" identifier="toRecipeDetails" id="kdF-uh-brg"/>
                         <segue destination="J5c-1b-iLD" kind="show" identifier="toAddRecipe" id="m49-fN-atj"/>
@@ -191,6 +196,7 @@
                         <viewLayoutGuide key="safeArea" id="4If-GV-7ON"/>
                     </view>
                     <connections>
+                        <outlet property="recipeTableView" destination="8Pl-or-7cb" id="btU-V4-mZE"/>
                         <segue destination="oY8-TY-LDq" kind="show" identifier="toRecipeDetails" id="gyG-aW-51a"/>
                     </connections>
                 </viewController>
@@ -359,7 +365,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Xi9-pn-C2I">
-                                <rect key="frame" x="0.0" y="64" width="375" height="603"/>
+                                <rect key="frame" x="0.0" y="64" width="375" height="554"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="Recipe" rowHeight="68" id="6oX-kC-QH9">
@@ -499,7 +505,7 @@
         <image name="shop-cart" width="72" height="72"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="cgg-5p-EjF"/>
+        <segue reference="gyG-aW-51a"/>
         <segue reference="DtB-Bu-ib5"/>
     </inferredMetricsTieBreakers>
 </document>
